Continuing refactoring; using Play 2.8; using Http.Context and ContextFilter; fixing DAOs and transactions; adding tests; use JatosException and their descendents whereever possible; GUI fix error messages if JSON from API